--- a/process.prod.env
+++ b/process.prod.env
@@ -6,4 +6,4 @@ REDIS_URI=redis://:your_redis_password@127.0.0.1:6379/0
 SECRET=12fhoweja32fdsjasf235er0higfhd
 STATIC_DIR=/var/www/static
 UPLOAD_DIR=/var/www/static/photos
-whitelist=["http://your_server_ip","https://your_server_ip"]
+whitelist=["http://your_server_ip"]
